# llms_selenium_automations

./: .gitignore  LICENSE  README.md  pyproject.toml
llms_selenium_automation/: logger.py
llms_selenium_automations/: exceptions.py  logger.py
llms_selenium_automations/abc/: llm_handler_abc.py
llms_selenium_automations/automations/: grok_automation_without_login.py
